# server/src/endpoints.rs
@@ -7,7 +7,7 @@ use build_info::BuildInfo;
 use std::sync::Arc;
 use trustify_auth::authenticator::Authenticator;
 use trustify_common::{
-    feature::{ActiveFeatures, Capabilities, Feature},
+    capability::{ActiveCapabilities, Capability, Variants},
     middleware::ReadOnlyState,
 };
 use utoipa_actix_web::service_config::ServiceConfig;
@@ -28,11 +28,11 @@ pub fn configure(svc: &mut ServiceConfig, auth: Option<Arc<Authenticator>>, read
 struct Info<'a> {
     version: &'a str,
     read_only: bool,
-    /// Deprecated — use the `features` array instead.
+    /// Deprecated — use the `capabilities` array instead.
     exploit_intelligence: bool,
-    features: Vec<String>,
+    capabilities: Vec<String>,
     #[schema(value_type = HashMap<String, Vec<String>>)]
-    capabilities: Capabilities,
+    variants: Variants,
     #[serde(skip_serializing_if = "Option::is_none")]
     #[schema(value_type = serde_json::Object)]
     build: Option<&'a BuildInfo>,
@@ -50,8 +50,8 @@ pub async fn info(
     req: HttpRequest,
     auth: Option<web::Data<Authenticator>>,
     read_only: ReadOnlyState,
-    features: web::Data<ActiveFeatures>,
-    capabilities: web::Data<Capabilities>,
+    capabilities: web::Data<ActiveCapabilities>,
+    variants: web::Data<Variants>,
 ) -> HttpResponse {
     let details = match auth {
         // authentication is disabled, enable details
@@ -75,9 +75,9 @@ pub async fn info(
     HttpResponse::Ok().json(Info {
         version: env!("CARGO_PKG_VERSION"),
         read_only: *read_only,
-        exploit_intelligence: features.contains(&Feature::ExploitIntelligence),
-        features: features.as_sorted_vec(),
-        capabilities: capabilities.get_ref().clone(),
+        exploit_intelligence: capabilities.contains(&Capability::ExploitIntelligence),
+        capabilities: capabilities.as_sorted_vec(),
+        variants: variants.get_ref().clone(),
         build: details.then(build_info),
     })
 }
